# F.I.R.E-challange-

./: .env  .env.example  .gitignore  Makefile  README.md  TODO  docker-compose.yml  local_run_instructions.md
backend/: Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/app/: assignment.py  bootstrap.py  config.py  db.py  main.py  models.py  pipeline_integration.py  schemas.py  service.py
docs/: .~lock.THE F.I.R.E. CHALLENGE.docx#
front/: package-lock.json
front/app/: globals.css  (+1 more)
pipeline-service/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
pipeline-service/scripts/: load_env.ps1  prepare_type_model.ps1  test_ocr_image.py
pipeline-service/src/pipeline_service/: main.py  settings.py
pipeline-service/src/pipeline_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pipeline-service/src/pipeline_service/application/graph/: ticket_graph.py
pipeline-service/src/pipeline_service/application/nodes/: assign_manager.py  extract_ocr_text.py  get_enriched_data.py  get_geo_data.py  get_language.py  get_priority.py  get_sentiment.py  get_summary_recommendation.py  get_type.py  ingest_data.py  is_spam.py  persist.py  start.py  type_gate.py
pipeline-service/src/pipeline_service/application/services/: __init__.py  csv_ingestion_service.py  ocr_cleanup.py
pipeline-service/src/pipeline_service/application/state/: __init__.py  ticket_state.py
pipeline-service/src/pipeline_service/domain/entities/: analysis.py  ticket.py
pipeline-service/src/pipeline_service/domain/services/: normalization.py
pipeline-service/src/pipeline_service/infrastructure/geo/: __init__.py  nominatim_client.py
pipeline-service/src/pipeline_service/infrastructure/ingestion/: csv_reader.py
pipeline-service/src/pipeline_service/infrastructure/llm/: __init__.py  ollama_client.py
pipeline-service/src/pipeline_service/infrastructure/ocr/: __init__.py  paddleocr_client.py
pipeline-service/src/pipeline_service/infrastructure/persistence/: repository.py
pipeline-service/src/pipeline_service/interfaces/cli/: __init__.py  run_graph.py
pipeline-service/tests/: test_csv_ingestion.py  test_get_sentiment.py  test_get_sentiment_local_integration.py  test_graph_smoke.py  test_ocr_node.py
(+59 files in other folders)
