[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-service"
version = "0.1.0"
description = "DDD-oriented ticket pipeline service built with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.50",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
