[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-service"
version = "0.1.0"
description = "DDD-oriented ticket pipeline service built with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy<2",
  "langgraph>=0.2.50",
  "requests>=2.32.0",
  "fasttext>=0.9.3",
  "Pillow>=10.0.0",
  "paddleocr==2.7.3",
  "paddlepaddle==2.6.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
